cabal-version:      3.0
name:               dystopia-blog
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             andystopia
maintainer:         fatal: --local can only be used inside a git repository
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable dystopia-blog
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1, scotty, wai, wai-websockets, warp, text, websockets, pandoc, directory, http-types, doctemplates, filepath, containers, doclayout, mtl, bytestring, exceptions
    hs-source-dirs:   app
    default-language: Haskell2010
